<?xml version="1.0" encoding="utf-8"?>
<resources>

	<!-- 
		system string 
	-->
    <string name="hello">Hello!</string>
    <string name="app_name">大课堂老师端</string>
    <string name="vesion_msg">金商祺大课堂互动教学平台Android客户端V4.0版</string>
    
    <!-- 
    	main_string
     -->
    <string name="myresourse">本地资源</string>
    <string name="graffiti">涂鸦</string>
    <string name="note">记事本</string>
    <string name="recorder">录音机</string>
	<string name="photograph">相机</string>
    <string name="user_login">用户登录</string>
    <string name="user_name">帐    号  :</string>
    <string name="user_pwd">密    码  :</string>
    <string name="user_save_ms">记住登录信息</string>
    <string name="login">登    录</string>
    <string name="out">退    出</string>
    <string name="make_out">确定退出</string>
	<string name="make_out_true">确定退出大课堂?</string>
	<string name="ok">确定</string>
	<string name="cancel">取消</string>
	<string name="save">保存</string>
	<string name="save_ok">保存完成</string>
	<string name="default_img_name">大课堂图片</string>
	<string name="photograph_name">请输入照片名称</string>
	<string name="default_recording_name">大课堂音频</string>
	<string name="recording_name">请输入音频名称</string>
	
	<string name="enter_username">请输入用户名</string>
	<string name="enter_pwd">请输入密码</string>
	<!-- 
	     popu_string
	 -->
	 <string name="system_set">系统设置</string>
	 <string name="vesion">版本信息</string>
	 <string name="server_ip">服务器地址</string>
	 <string name="push_ip">推送服务器</string>
	 <!-- 笔记 -->
    <string name="my_note_type">我的笔记分组</string>
    <string name="new_note">(最新)</string>
    <string name="search_content">请输入搜索内容</string>
	 <!-- 
	 	home_string
	  -->
	  <string name="home">首\t页</string>
	  <string name="home_resource">资\t源</string>
	  <string name="home_class">课\t程</string>
	  <string name="home_homework">作\t业</string>
	  <string name="home_msg">消\t息</string>
	  <string name="home_tool">工\t具</string>
	  <string name="home_sche">本周日程</string>
	 <!-- 
	 	resource_string
	  -->
	  <string name="resource_img">图片</string>
	  <string name="resource_video">视频</string>
	  <string name="resource_doc">文档</string>
	  <string name="resource_redio">音频</string>
	  <string name="resource_search">请输入搜索内容</string>
	  <string name="file_type">格式：</string>
	  <string name="file_time">时间：</string>
	  <string name="file_scan">立即查看</string>
	  <string name="file_not_find">该文件不存在或已经删除</string>
	  
	  <!-- 
	  	classhour_string
	   -->
	   <string name="classhour_dynamic">动态</string>
	   <string name="classhour_work">作业</string>
	   <string name="classhour_resource">资源</string>
	   <string name="classhour_activity">活动</string>
	   <string name="classhour_choose_all">环节</string>
	   <string name="classhour_start">开始上课</string>
	   <string name="classhour_pub">发布课时</string>
</resources>