<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/white">

    <RelativeLayout android:id="@+id/home_title_layout"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:background="@drawable/home_title_bg">
    	
        <Button
        android:id="@+id/course_back_btn"
        android:layout_width="60dp"
        android:layout_height="37dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/back" />
        
        <TextView android:id="@+id/course_title_text"
           	android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:textColor="@color/white"
    		android:textSize="25sp"
			android:layout_centerInParent="true"
    		android:text="@string/home_class"/>
        
        <RelativeLayout android:id="@+id/home_head_layout"
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_alignParentRight="true"
	    	android:layout_marginRight="10dp"
	    	android:background="@drawable/home_title_head_bg">
	    	
            <ImageView android:id="@+id/home_title_head"
                android:layout_width="50dp"
	    		android:layout_height="50dp"
	    		android:layout_centerInParent="true"
	    		android:src="@drawable/logo"/>
            
        </RelativeLayout>
        
        <TextView android:id="@+id/home_username_text"
           	android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_toLeftOf="@+id/home_head_layout"
    		android:textColor="@color/white"
    		android:textSize="18sp"
    		android:layout_marginRight="5dp"
    		android:text="朱老师"
    		android:layout_centerVertical="true"/>
        
    </RelativeLayout>
	
    <RelativeLayout android:id="@+id/course_content_layout"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal" >
        
    	<TextView 
		    android:id="@+id/main_focus"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="350dp"
		    android:layout_marginTop="10dp"
		    android:visibility="invisible"/>   
		    
        <RelativeLayout 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="vertical">
			
			<RelativeLayout android:id="@+id/classhour_content_title_layout"
		        android:layout_width="match_parent"
		    	android:layout_height="60dp"
		    	android:orientation="vertical"
		    	android:background="@color/ec">
		    	<!-- 
				<Button
			        android:id="@+id/classhour_choose_btn"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_alignParentRight="true"
			        android:layout_marginRight="30dp"
			        android:layout_marginTop="5dp"
			        android:text="@string/classhour_choose_all"
			        android:textColor="@color/black"
			        android:background="@drawable/classhour_choose_selector" />	
			      -->   
			    <TextView android:id="@+id/classhour_resource_num"
				    android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_alignParentRight="true"
			        android:layout_marginRight="30dp"
			        android:layout_alignParentBottom="true"
			        android:textColor="@color/green"
			        android:text=""/>
			    <RadioGroup android:id="@+id/classhour_ra"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_toLeftOf="@+id/classhour_resource_num"
	            android:layout_marginRight="30dp"
	            android:orientation="horizontal" >
		            <RadioButton
		                android:id="@+id/classhour_dynamic_btn"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_marginTop="10dp"
		                android:button="@null"
		                android:background="#00000000"
		                android:drawablePadding="2dp"
		                android:gravity="center"
		                android:layout_marginLeft="50dp"
		                android:drawableTop="@drawable/classhour_dynamic_selector"                
		                android:text="@string/classhour_dynamic" 
		                android:textColor="@color/button_text"
		                android:textSize="16sp"/>
					<RadioButton
		                android:id="@+id/classhour_work_btn"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_marginTop="10dp"
		                android:button="@null"
		                android:background="#00000000"
		                android:drawablePadding="2dp"
		                android:gravity="center"
		                android:layout_marginLeft="50dp"
		                android:drawableTop="@drawable/classhour_work_selector"                
		                android:text="@string/classhour_work" 
		                android:textColor="@color/button_text"
		                android:textSize="16sp"/>	                
					<RadioButton
		                android:id="@+id/classhour_resource_btn"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_marginTop="10dp"
		                android:button="@null"
		                android:background="#00000000"
		                android:drawablePadding="2dp"
		                android:gravity="center"
		                android:layout_marginLeft="50dp"
		                android:drawableTop="@drawable/classhour_resource_selector"                
		                android:text="@string/classhour_resource" 
		                android:textColor="@color/button_text"
		                android:textSize="16sp"/>
					<RadioButton
		                android:id="@+id/classhour_activity_btn"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_marginTop="10dp"
		                android:button="@null"
		                android:background="#00000000"
		                android:drawablePadding="2dp"
		                android:gravity="center"
		                android:layout_marginLeft="50dp"
		                android:drawableTop="@drawable/classhour_activity_selector"                
		                android:text="@string/classhour_activity" 
		                android:textColor="@color/button_text"
		                android:textSize="16sp"/>                	                
				</RadioGroup>  
				
				<Button
			        android:id="@+id/classhour_start_btn"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/classhour_start"
			        android:textColor="@color/black"
			        android:layout_marginTop="8dp"	
			        android:layout_marginLeft="20dp"	
			        android:textSize="16sp"    			        
			        android:layout_alignParentLeft="true"
			        android:background="@drawable/classhour_start" />
			    
			        
		    </RelativeLayout>
		    <TextView android:id="@+id/classhour_sp_text"
		        android:layout_width="match_parent"
		    	android:layout_height="1dp"
		    	android:layout_below="@+id/classhour_content_title_layout"
		    	android:background="@color/el"/>
		    
    		<RelativeLayout android:id="@+id/classhour_change_layout"
		        android:layout_width="wrap_content"
		        android:layout_below="@+id/classhour_sp_text"
		    	android:layout_height="wrap_content"
		    	android:background="@color/ec"
		    	android:orientation="vertical">
				
				
	    	</RelativeLayout>
    	</RelativeLayout>
    </RelativeLayout>
    
</LinearLayout>